test to fix hero overflow on firefox

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -165,20 +165,15 @@ p {
     .illustration-container {
         display: flex;
         justify-content: center;
-        margin-top: 50px;
+        margin-top: 30px;
 
         @include desktop {
             margin-top: 0;
         }
 
         .hero-illustration {
-            width: 300px;
-            height: 400px;
-
-            // @include tablet {
-            //     width: 400px;
-            //     height: 500px;
-            // }
+            width: 280px;
+            height: 350px;
 
             @include desktop {
                 width: 430px;
